--- a/meta/main.yml
+++ b/meta/main.yml
@@ -32,7 +32,7 @@ galaxy_info:
   #
   # platforms is a list of platforms, and each platform has a name and a list of versions.
   #
-  # platforms:
+  platforms:
   # - name: Fedora
   #   versions:
   #   - all
@@ -43,9 +43,8 @@ galaxy_info:
   #   - 1.0
   #   - 7
   #   - 99.99
- - name: Ubuntu
-   version: bionic
-galaxy_tags: []
+    - name: Ubuntu
+      version: bionic
   galaxy_tags: []
     # List tags for your role here, one per line. A tag is a keyword that describes
     # and categorizes the role. Users find roles by searching for tags. Be sure to
